--- a/.env.local.example
+++ b/.env.local.example
@@ -3,13 +3,13 @@ NEXT_PUBLIC_SUPABASE_URL=your-project-url.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
-# Mercado Pago
-NEXT_PUBLIC_MERCADO_PAGO_PUBLIC_KEY=your-public-key
-MERCADO_PAGO_ACCESS_TOKEN=your-access-token
+# Mercado Pago (configurar depois)
+NEXT_PUBLIC_MERCADO_PAGO_PUBLIC_KEY=
+MERCADO_PAGO_ACCESS_TOKEN=
 
-# Efibank
-NEXT_PUBLIC_EFIBANK_CLIENT_ID=your-client-id
-EFIBANK_CLIENT_SECRET=your-client-secret
+# Efibank (configurar depois)
+NEXT_PUBLIC_EFIBANK_CLIENT_ID=
+EFIBANK_CLIENT_SECRET=
 
 # App
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=https://doglivery.vercel.app
